# init_server

./: Cargo.toml  EXAMPLES.md  INSTALL.md  MODULES.md  README.md  install.sh  release.sh
release/: init_server
src/: backup.rs  bash_script.rs  build.rs  config.rs  docker.rs  lib.rs  logger.rs  main.rs  nginx.rs  security.rs  server.rs  uninstall.rs  utils.rs
