[package]
name = "init_server"
version = "0.1.0"
edition = "2021"
description = "A Rust utility for initial server setup on Ubuntu 24"
authors = ["Nikolay Fedotov <nikolay@web-ap.ru>"]
build = "src/build.rs"

[[bin]]
name = "init_server"

[features]
default = ["windows-dev"]
windows-dev = []

[target.'cfg(unix)'.dependencies]
openssl = "0.10"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
colored = "2.0"
dotenv = "0.15"
regex = "1.8"
rand = "0.8"
nix = "0.26"
ssh2 = "0.9"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.21"
argon2 = "0.5"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
dialoguer = "0.10"
indicatif = "0.17"
